ingress/mysvc2.yml
apiVersion: v1
kind: Service
metadata:
 name: mywebsitetwo-svc
 labels:
    app: mywebsitetwo
    
spec:
  type: NodePort
  ports:
  - port: 8080
    nodePort: 30002
    protocol: TCP
  selector:
     app:  mywebsitetwo
    


# -p 30001:8080
