ingress/ingress.yml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: myweb-ingress
  annotations:
    ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - http:
      paths:
        - path: /muna
          backend:
            serviceName: mywebsiteone-svc
            servicePort: 8080
        - path: /abhi
          backend:
            serviceName: mywebsitetwo-svc
            servicePort: 8080
