ingress/mying1.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: minimal-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - http:
      paths:
      - path: /websiteone
        pathType: Prefix
        backend:
          service:
            name: mywebsiteone-svc
            port:
              number: 8080

      - path: /websitetwo
        pathType: Prefix
        backend:
          service:
            name: mywebsitetwo-svc
            port:
              number: 8080
